--- a/project.ipynb
+++ b/project.ipynb
@@ -5,9 +5,10 @@
    "id": "68fc3669",
    "metadata": {},
    "source": [
+    "For røykerandelen av befolkningen\n",
     "https://www.ssb.no/helse/helseforhold-og-levevaner/statistikk/royk-alkohol-og-andre-rusmidler\n",
     "\n",
-    "\n",
+    "For luftkvalitet\n",
     "https://luftkvalitet.nilu.no/historikk\n",
     "\n"
    ]
@@ -17,7 +18,19 @@
    "id": "c7179e7d",
    "metadata": {},
    "source": [
+    "Potensielt \n",
     "https://norgeshelsa.no/norgeshelsa/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b6c365f",
+   "metadata": {},
+   "source": [
+    "## Datakilde\n",
+    "- statbank\n",
+    "- asthma og status asthmaticus (astma og akutt astma)\n",
+    "- per nå for alle år, alle kjønn, alle aldere (gruppevis) for både liggedager, dagbehandlinger og utksrivninger."
    ]
   },
   {
@@ -30,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3357b3ec",
    "metadata": {},
    "outputs": [
@@ -333,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "16ed8895",
    "metadata": {},
    "outputs": [],
@@ -346,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3cf2e17b",
    "metadata": {},
    "outputs": [],
@@ -374,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2572bb79",
    "metadata": {},
    "outputs": [],
@@ -400,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "982c4410",
    "metadata": {},
    "outputs": [
