added data on smoking

--- a/regression.ipynb
+++ b/regression.ipynb
@@ -321,6 +321,181 @@
     "print(f\"Norway average (2004-2008): {post_nor:.2f}\")\n",
     "print(f\"Difference: {post_nor - post_den:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab5fabf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Norway smoking summed data:\n",
+      "1999    5104\n",
+      "2000    5208\n",
+      "2001    5216\n",
+      "2002    5485\n",
+      "2003    5288\n",
+      "2004    5243\n",
+      "2005    5225\n",
+      "2006    4968\n",
+      "2007    4997\n",
+      "2008    4637\n",
+      "dtype: int64\n",
+      "\n",
+      "Denmark smoking summed data:\n",
+      "1999    2149\n",
+      "2000    2231\n",
+      "2001    1690\n",
+      "2002    1732\n",
+      "2003    1608\n",
+      "2004    1325\n",
+      "2005    1122\n",
+      "2006    1032\n",
+      "2007     908\n",
+      "2008     849\n",
+      "dtype: int64\n",
+      "\n",
+      "Combined smoking data:\n",
+      "   Country  1999  2000  2001  2002  2003  2004  2005  2006  2007  2008\n",
+      "0  Denmark  2149  2231  1690  1732  1608  1325  1122  1032   908   849\n",
+      "1   Norway  5104  5208  5216  5485  5288  5243  5225  4968  4997  4637\n",
+      "\n",
+      "Smoking data in long format:\n",
+      "   Country  Year  Smokers\n",
+      "0  Denmark  1999     2149\n",
+      "1   Norway  1999     5104\n",
+      "2  Denmark  2000     2231\n",
+      "3   Norway  2000     5208\n",
+      "4  Denmark  2001     1690\n",
+      "5   Norway  2001     5216\n",
+      "6  Denmark  2002     1732\n",
+      "7   Norway  2002     5485\n",
+      "8  Denmark  2003     1608\n",
+      "9   Norway  2003     5288\n",
+      "\n",
+      "Merged hospital cases and smoking data:\n",
+      "    Country  Year  Cases  Post_2004  Norway  Treated  Smokers\n",
+      "0   Denmark  1999  16490          0       0        0     2149\n",
+      "1    Norway  1999  18968          0       1        0     5104\n",
+      "2   Denmark  2000  15229          0       0        0     2231\n",
+      "3    Norway  2000  16350          0       1        0     5208\n",
+      "4   Denmark  2001  17049          0       0        0     1690\n",
+      "5    Norway  2001  18120          0       1        0     5216\n",
+      "6   Denmark  2002  14980          0       0        0     1732\n",
+      "7    Norway  2002  16007          0       1        0     5485\n",
+      "8   Denmark  2003  16437          0       0        0     1608\n",
+      "9    Norway  2003  16632          0       1        0     5288\n",
+      "10  Denmark  2004  15316          1       0        0     1325\n",
+      "11   Norway  2004  16463          1       1        1     5243\n",
+      "12  Denmark  2005  16398          1       0        0     1122\n",
+      "13   Norway  2005  17775          1       1        1     5225\n",
+      "14  Denmark  2006  15918          1       0        0     1032\n",
+      "\n",
+      "============================================================\n",
+      "DiD WITH SMOKING CONTROLS\n",
+      "============================================================\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  Cases   R-squared:                       0.309\n",
+      "Model:                            OLS   Adj. R-squared:                  0.125\n",
+      "Method:                 Least Squares   F-statistic:                     1.679\n",
+      "Date:                Wed, 08 Oct 2025   Prob (F-statistic):              0.207\n",
+      "Time:                        14:28:45   Log-Likelihood:                -165.24\n",
+      "No. Observations:                  20   AIC:                             340.5\n",
+      "Df Residuals:                      15   BIC:                             345.5\n",
+      "Df Model:                           4                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const       1.604e+04   2340.486      6.851      0.000     1.1e+04     2.1e+04\n",
+      "Norway      1175.8190   4166.979      0.282      0.782   -7705.886    1.01e+04\n",
+      "Post_2004   -495.1622   1224.814     -0.404      0.692   -3105.791    2115.467\n",
+      "Treated     -102.2497   1204.082     -0.085      0.933   -2668.690    2464.191\n",
+      "Smokers        0.0008      1.217      0.001      1.000      -2.593       2.594\n",
+      "==============================================================================\n",
+      "Omnibus:                        1.685   Durbin-Watson:                   1.402\n",
+      "Prob(Omnibus):                  0.431   Jarque-Bera (JB):                0.960\n",
+      "Skew:                          -0.070   Prob(JB):                        0.619\n",
+      "Kurtosis:                       1.936   Cond. No.                     7.66e+04\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large, 7.66e+04. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n",
+      "\n",
+      "============================================================\n",
+      "COMPARISON: WITH vs WITHOUT SMOKING CONTROLS\n",
+      "============================================================\n",
+      "Original DiD estimate: -101.80 (p-value: 0.9149)\n",
+      "Controlled DiD estimate: -102.25 (p-value: 0.9334)\n",
+      "Difference in estimate: -0.45\n",
+      "Smoking coefficient: 0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df_royk_no = pd.read_excel('røykere_filtered_no.xlsx')\n",
+    "df_royk_den = pd.read_excel('røykere_filtered_den.xlsx')\n",
+    "\n",
+    "# Sum smoking data for both countries\n",
+    "df_royk_no_summed = df_royk_no.select_dtypes(include=[np.number]).sum()\n",
+    "df_royk_den_summed = df_royk_den.select_dtypes(include=[np.number]).sum()\n",
+    "\n",
+    "print(\"Norway smoking summed data:\")\n",
+    "print(df_royk_no_summed)\n",
+    "print(\"\\nDenmark smoking summed data:\")\n",
+    "print(df_royk_den_summed)\n",
+    "\n",
+    "# Create DataFrames for smoking data\n",
+    "df_smokers_no_total = pd.DataFrame([df_royk_no_summed]).reset_index(drop=True)\n",
+    "df_smokers_no_total.insert(0, 'Country', 'Norway')\n",
+    "\n",
+    "df_smokers_den_total = pd.DataFrame([df_royk_den_summed]).reset_index(drop=True)\n",
+    "df_smokers_den_total.insert(0, 'Country', 'Denmark')\n",
+    "\n",
+    "# Force column names to be strings\n",
+    "df_smokers_no_total.columns = ['Country'] + [str(col) for col in df_smokers_no_total.columns[1:]]\n",
+    "df_smokers_den_total.columns = ['Country'] + [str(col) for col in df_smokers_den_total.columns[1:]]\n",
+    "\n",
+    "# Find common years for smoking data\n",
+    "no_smoking_cols = set(df_smokers_no_total.columns) - {'Country'}\n",
+    "den_smoking_cols = set(df_smokers_den_total.columns) - {'Country'}\n",
+    "common_smoking_cols = sorted(no_smoking_cols.intersection(den_smoking_cols))\n",
+    "\n",
+    "# Align smoking data\n",
+    "df_smokers_no_aligned = df_smokers_no_total[['Country'] + common_smoking_cols]\n",
+    "df_smokers_den_aligned = df_smokers_den_total[['Country'] + common_smoking_cols]\n",
+    "\n",
+    "# Combine smoking data\n",
+    "df_smoking_combined = pd.concat([df_smokers_den_aligned, df_smokers_no_aligned], ignore_index=True)\n",
+    "print(\"\\nCombined smoking data:\")\n",
+    "print(df_smoking_combined)\n",
+    "\n",
+    "# Convert to long format\n",
+    "df_smoking_long = df_smoking_combined.melt(id_vars=['Country'], var_name='Year', value_name='Smokers')\n",
+    "df_smoking_long = df_smoking_long.dropna()\n",
+    "df_smoking_long['Year'] = pd.to_numeric(df_smoking_long['Year'])\n",
+    "\n",
+    "print(\"\\nSmoking data in long format:\")\n",
+    "print(df_smoking_long.head(10))\n",
+    "\n",
+    "# Merge hospital cases with smoking data\n",
+    "df_merged = pd.merge(df_long, df_smoking_long, on=['Country', 'Year'], how='inner')\n",
+    "print(\"\\nMerged hospital cases and smoking data:\")\n",
+    "print(df_merged.head(15))\n",
+    "\n",
+    "# Run DiD regression with smoking controls\n",
+    "# Model: Cases = α + β1*Norway + β2*Post2004 + β3*Treated + β4*Smokers + ε\n",
+    "X_controlled = df_merged[['Norway', 'Post_2004', 'Treated', 'Smokers']].copy()\n",
+    "X_controlled = sm.add_constant(X_controlled)\n",
+    "y_controlled = df_merged['Cases']\n"
+   ]
   }
  ],
  "metadata": {
