--- a/new_data.ipynb
+++ b/new_data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 211,
    "id": "95c3fe2e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 212,
    "id": "50d70193",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
        "14       1619.0       1568.0       1610.0       1582.0       1728.0  "
       ]
      },
-     "execution_count": 200,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 213,
    "id": "2dc2799f",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        "3  1832.0   1807.0  1682.0   1655.0  1517.0  1671.0  1595.0   1668.0  "
       ]
      },
-     "execution_count": 201,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 214,
    "id": "47b09ec2",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
        "3  15-19 years  1776.0   1822.0  1582.0   1851.0"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 215,
    "id": "e36f24f4",
    "metadata": {},
    "outputs": [
@@ -898,7 +898,7 @@
        "3   1822.0  1582.0   1851.0  "
       ]
      },
-     "execution_count": 203,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 216,
    "id": "67db7539",
    "metadata": {},
    "outputs": [],
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 217,
    "id": "9f2717c2",
    "metadata": {},
    "outputs": [],
@@ -949,6 +949,460 @@
     "df_no_clean.columns.values[0] = 'Age Group'\n",
     "df_no_clean.head(15)\n",
     "df_no_clean.to_excel('norway_final.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "id": "33856e82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_royk = pd.read_excel('røykere99_08.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "id": "a609b2fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>05307: Dagligrøykere og av-og-til-røykere (16-79 år), etter kjønn, alder, statistikkvariabel og år</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>Unnamed: 10</th>\n",
+       "      <th>Unnamed: 11</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Antall respondenter</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>2001.0</td>\n",
+       "      <td>2002.0</td>\n",
+       "      <td>2003.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>2005.0</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>2008.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Begge kjønn</td>\n",
+       "      <td>I alt</td>\n",
+       "      <td>5104</td>\n",
+       "      <td>5208.0</td>\n",
+       "      <td>5216.0</td>\n",
+       "      <td>5485.0</td>\n",
+       "      <td>5288.0</td>\n",
+       "      <td>5243.0</td>\n",
+       "      <td>5225.0</td>\n",
+       "      <td>4968.0</td>\n",
+       "      <td>4997.0</td>\n",
+       "      <td>4637.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>I 2024 ble for første gang undersøkelsen gjenn...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Treårig glidende gjennomsnitt fram til 1991. F...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sist endret:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Antall respondenter:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>20241118 08:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Kilde:</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Statistisk sentralbyrå</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   05307: Dagligrøykere og av-og-til-røykere (16-79 år), etter kjønn, alder, statistikkvariabel og år  \\\n",
+       "0                                                 NaN                                                   \n",
+       "1                                                 NaN                                                   \n",
+       "2                                                 NaN                                                   \n",
+       "3                                         Begge kjønn                                                   \n",
+       "4                                                 NaN                                                   \n",
+       "5   I 2024 ble for første gang undersøkelsen gjenn...                                                   \n",
+       "6   Treårig glidende gjennomsnitt fram til 1991. F...                                                   \n",
+       "7                                                 NaN                                                   \n",
+       "8                                        Sist endret:                                                   \n",
+       "9                                Antall respondenter:                                                   \n",
+       "10                                     20241118 08:00                                                   \n",
+       "11                                                NaN                                                   \n",
+       "12                                             Kilde:                                                   \n",
+       "13                             Statistisk sentralbyrå                                                   \n",
+       "14                                                NaN                                                   \n",
+       "\n",
+       "   Unnamed: 1           Unnamed: 2  Unnamed: 3  Unnamed: 4  Unnamed: 5  \\\n",
+       "0         NaN                  NaN         NaN         NaN         NaN   \n",
+       "1         NaN  Antall respondenter         NaN         NaN         NaN   \n",
+       "2         NaN                 1999      2000.0      2001.0      2002.0   \n",
+       "3       I alt                 5104      5208.0      5216.0      5485.0   \n",
+       "4         NaN                  NaN         NaN         NaN         NaN   \n",
+       "5         NaN                  NaN         NaN         NaN         NaN   \n",
+       "6         NaN                  NaN         NaN         NaN         NaN   \n",
+       "7         NaN                  NaN         NaN         NaN         NaN   \n",
+       "8         NaN                  NaN         NaN         NaN         NaN   \n",
+       "9         NaN                  NaN         NaN         NaN         NaN   \n",
+       "10        NaN                  NaN         NaN         NaN         NaN   \n",
+       "11        NaN                  NaN         NaN         NaN         NaN   \n",
+       "12        NaN                  NaN         NaN         NaN         NaN   \n",
+       "13        NaN                  NaN         NaN         NaN         NaN   \n",
+       "14        NaN                  NaN         NaN         NaN         NaN   \n",
+       "\n",
+       "    Unnamed: 6  Unnamed: 7  Unnamed: 8  Unnamed: 9  Unnamed: 10  Unnamed: 11  \n",
+       "0          NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "1          NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "2       2003.0      2004.0      2005.0      2006.0       2007.0       2008.0  \n",
+       "3       5288.0      5243.0      5225.0      4968.0       4997.0       4637.0  \n",
+       "4          NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "5          NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "6          NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "7          NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "8          NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "9          NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "10         NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "11         NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "12         NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "13         NaN         NaN         NaN         NaN          NaN          NaN  \n",
+       "14         NaN         NaN         NaN         NaN          NaN          NaN  "
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_royk.head(15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37e492da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>1999</th>\n",
+       "      <th>2000.0</th>\n",
+       "      <th>2001.0</th>\n",
+       "      <th>2002.0</th>\n",
+       "      <th>2003.0</th>\n",
+       "      <th>2004.0</th>\n",
+       "      <th>2005.0</th>\n",
+       "      <th>2006.0</th>\n",
+       "      <th>2007.0</th>\n",
+       "      <th>2008.0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I alt</td>\n",
+       "      <td>5104</td>\n",
+       "      <td>5208.0</td>\n",
+       "      <td>5216.0</td>\n",
+       "      <td>5485.0</td>\n",
+       "      <td>5288.0</td>\n",
+       "      <td>5243.0</td>\n",
+       "      <td>5225.0</td>\n",
+       "      <td>4968.0</td>\n",
+       "      <td>4997.0</td>\n",
+       "      <td>4637.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Unnamed: 1  1999  2000.0  2001.0  2002.0  2003.0  2004.0  2005.0  2006.0  \\\n",
+       "0      I alt  5104  5208.0  5216.0  5485.0  5288.0  5243.0  5225.0  4968.0   \n",
+       "\n",
+       "   2007.0  2008.0  \n",
+       "0  4997.0  4637.0  "
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_royk_clean = df_royk.iloc[2:].copy()\n",
+    "# First, select only the columns we want (column 2 onwards - age groups + year data)\n",
+    "df_royk_clean = df_royk_clean.iloc[:, 1:]\n",
+    "# Now set the column names: keep the first column name (age groups) and use years from row 0\n",
+    "new_columns = [df_royk_clean.columns[0]] + list(df_royk_clean.iloc[0, 1:])\n",
+    "df_royk_clean.columns = new_columns\n",
+    "df_royk_clean = df_royk_clean.iloc[1:]  # Remove the row with years\n",
+    "df_royk_clean.reset_index(drop=True, inplace=True)\n",
+    "df_royk_clean = df_royk_clean.loc[:, df_royk_clean.columns.notna()]\n",
+    "\n",
+    "df_royk_clean.head(15)\n",
+    "df_royk_filtered = df_royk_clean.iloc[[0]].copy()\n",
+    "df_royk_filtered.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "df_royk_filtered.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "id": "c41a8692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_royk_den = pd.read_excel('røykere_den_raw_99_08.xlsx')\n",
+    "\n",
+    "df_royk_den_clean = df_royk_den.iloc[1:].copy()\n",
+    "df_royk_den_clean.columns = new_columns\n",
+    "df_royk_den_clean = df_royk_den_clean.iloc[1:2]  # Remove the row with years\n",
+    "df_royk_den_clean.reset_index(drop=True, inplace=True)\n",
+    "df_royk_den_clean = df_royk_den_clean.loc[:, df_royk_den_clean.columns.notna()]\n",
+    "df_royk_filtered = df_royk_den_clean.iloc[[0]].copy()\n",
+    "df_royk_filtered.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "df_royk_filtered.head()\n",
+    "df_royk_filtered.to_excel('røykere_filtered_den.xlsx', index=False)\n"
    ]
   }
  ],
